<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="300"
        android:entries="@array/pref_current_location_update_titles"
        android:entryValues="@array/pref_current_location_update_values"
        android:key="@string/pref_current_location_update_interval_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_current_location_update_interval" />


    <ListPreference
        android:defaultValue="600"
        android:entries="@array/pref_traffic_list_update_titles"
        android:entryValues="@array/pref_traffic_list_update_values"
        android:key="@string/pref_traffic_update_interval_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_traffic_update_interval" />

    <ListPreference
        android:defaultValue="102"
        android:entries="@array/pref_location_priority_titles"
        android:entryValues="@array/pref_location_priority_values"
        android:key="@string/pref_location_priority_type_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_location_type" />



    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->


</PreferenceScreen>
